catch maximized windows in ::keepInArea

BUG: 317068
FIXED-IN: 4.10.2